Sort button added, functinonality not implemented

--- a/app/src/main/res/layout/activity_car_rent.xml
+++ b/app/src/main/res/layout/activity_car_rent.xml
@@ -47,7 +47,8 @@
         android:layout_marginBottom="16dp"
         android:text="Stop Renting"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="133dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView2"
