--- a/app/src/main/res/layout/car_dialog.xml
+++ b/app/src/main/res/layout/car_dialog.xml
@@ -148,8 +148,8 @@
 
     <TextView
         android:id="@+id/cdTransmission"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="22dp"
+        android:layout_height="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:textSize="16sp"
@@ -193,10 +193,11 @@
         android:layout_width="36dp"
         android:layout_height="29dp"
         android:layout_marginStart="12dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toEndOf="@+id/cdRating"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:layout_editor_absoluteY="341dp" />
+        app:layout_constraintTop_toBottomOf="@+id/cdTransmission"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
