--- a/app/src/main/res/layout/car_dialog.xml
+++ b/app/src/main/res/layout/car_dialog.xml
@@ -10,49 +10,21 @@
         android:id="@+id/dialogCarPic"
         android:layout_width="121dp"
         android:layout_height="126dp"
-        app:layout_constraintBottom_toTopOf="@+id/textViewCarMakeLabel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.455"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        app:layout_constraintVertical_chainStyle="packed"
         app:srcCompat="@drawable/car_placeholder" />
-
-    <TextView
-        android:id="@+id/textViewCarMakeLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:text="Brand:"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/cdBrand"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dialogCarPic" />
 
     <TextView
         android:id="@+id/cdBrand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="20dp"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textViewCarMakeLabel"
         app:layout_constraintTop_toTopOf="@+id/textViewCarMakeLabel" />
-
-    <TextView
-        android:id="@+id/textViewCarModelLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Model:"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/cdModel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCarMakeLabel" />
 
     <TextView
         android:id="@+id/cdModel"
@@ -62,20 +34,9 @@
         android:layout_marginEnd="8dp"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.456"
         app:layout_constraintStart_toEndOf="@+id/textViewCarModelLabel"
         app:layout_constraintTop_toTopOf="@+id/textViewCarModelLabel" />
-
-    <TextView
-        android:id="@+id/textViewCarYearLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:text="Year:"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/cdYear"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCarModelLabel" />
 
     <TextView
         android:id="@+id/cdYear"
@@ -89,18 +50,6 @@
         app:layout_constraintTop_toTopOf="@+id/textViewCarYearLabel" />
 
     <TextView
-        android:id="@+id/textViewCarCategoryLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Category:"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/cdCategory"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCarYearLabel" />
-
-    <TextView
         android:id="@+id/cdCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -110,18 +59,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textViewCarCategoryLabel"
         app:layout_constraintTop_toTopOf="@+id/textViewCarCategoryLabel" />
-
-    <TextView
-        android:id="@+id/textViewCarFuelTypeLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Fuel Type:"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/cdFuel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCarCategoryLabel" />
 
     <TextView
         android:id="@+id/cdFuel"
@@ -134,70 +71,123 @@
         app:layout_constraintStart_toEndOf="@+id/textViewCarFuelTypeLabel"
         app:layout_constraintTop_toTopOf="@+id/textViewCarFuelTypeLabel" />
 
-    <TextView
-        android:id="@+id/textViewCarTransmissionLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Transmission:"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/cdTransmission"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCarFuelTypeLabel" />
-
-    <TextView
-        android:id="@+id/cdTransmission"
-        android:layout_width="22dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewCarTransmissionLabel"
-        app:layout_constraintTop_toTopOf="@+id/textViewCarTransmissionLabel" />
-
     <Button
         android:id="@+id/btnRentCar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="56dp"
         android:text="Rent"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.106"
-        app:layout_constraintStart_toStartOf="@+id/textView18"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cdRating" />
 
     <TextView
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="24dp"
         android:text="Rating:"
-        app:layout_constraintStart_toStartOf="@+id/textViewCarTransmissionLabel"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCarFuelTypeLabel" />
+
+    <TextView
+        android:id="@+id/textViewCarTransmissionLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="24dp"
+        android:text="Transmission:"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCarCategoryLabel" />
+
+    <TextView
+        android:id="@+id/textViewCarModelLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="24dp"
+        android:text="Model:"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCarMakeLabel" />
+
+    <TextView
+        android:id="@+id/textViewCarCategoryLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="24dp"
+        android:text="Category:"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCarYearLabel" />
+
+    <TextView
+        android:id="@+id/textViewCarYearLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="24dp"
+        android:text="Year:"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCarModelLabel" />
+
+    <TextView
+        android:id="@+id/textViewCarMakeLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="56dp"
+        android:text="Brand:"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dialogCarPic" />
+
+    <TextView
+        android:id="@+id/textViewCarFuelTypeLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="24dp"
+        android:text="Fuel Type:"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewCarTransmissionLabel" />
 
     <TextView
+        android:id="@+id/cdTransmission"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="22dp"
+        android:layout_marginEnd="8dp"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textViewCarTransmissionLabel"
+        app:layout_constraintTop_toTopOf="@+id/textViewCarTransmissionLabel" />
+
+    <TextView
         android:id="@+id/cdRating"
-        android:layout_width="50dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="55dp"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/textView18"
-        app:layout_constraintTop_toBottomOf="@+id/cdTransmission" />
+        app:layout_constraintTop_toTopOf="@+id/textView18" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="36dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="15dp"
+        android:layout_width="31dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="2dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintHorizontal_bias="0.208"
         app:layout_constraintStart_toEndOf="@+id/cdRating"
-        app:layout_constraintTop_toBottomOf="@+id/cdTransmission"
+        app:layout_constraintTop_toTopOf="@+id/cdRating"
         app:srcCompat="@android:drawable/btn_star_big_on" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
